ajuste do arquivo yml

--- a/manifest.yml
+++ b/manifest.yml
@@ -2,26 +2,26 @@
 language: nsolid
 default_versions:
 - name: node
-  version: 10.0.0
+  version: 6.x
 dependencies:
 - name: node
   version: 6.0.0                         # LTS line: boron
   uri: https://example.com/6.0.0         # uri not used
   md5: FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF  # md5 not used
   cf_stacks:
-  - cflinuxfs2
+  - cflinuxfs3
 - name: node
   version: 8.0.0                         # LTS line: carbon
   uri: https://example.com/8.0.0         # uri not used
   md5: FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF  # md5 not used
   cf_stacks:
-  - cflinuxfs2
+  - cflinuxfs3
 - name: node
   version: 10.0.0                        # LTS line: dubnium
   uri: https://example.com/10.0.0        # uri not used
   md5: FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF  # md5 not used
   cf_stacks:
-  - cflinuxfs2
+  - cflinuxfs3
 url_to_dependency_map:
 - match: nsolid-v(\d+\.\d+\.\d+)
   name: nsolid
