--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@
 language: nsolid
 default_versions:
 - name: node
-  version: 6.x
+  version: 6.0.0
 dependencies:
 - name: node
   version: 6.0.0                         # LTS line: boron
